<resources>
    <string name="app_name">IMN</string>
    <string name="password">Password</string>
    <string name="id">Student ID</string>
    <string name="login">LOG IN</string>

    <!-- PREFERENCES STRING -->
    <string name="pref_settinglabel">Settings Page</string>
    <string name="pref_title_system_setting_page">System Settings</string>
    <string name="pref_title_user_setting_page">User Preferences</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_summr_system_sync_settings">Set the frequency of syncing with MMLS</string>
    <string name="pref_title_system_clr_settings">System clear settings</string>
    <string name="pref_summr_system_clr_settings">Set the frequency of clearing cached posts</string>
    <string name="pref_title_system_notify_settings">Notifications</string>
    <string name="pref_summr_system_notify_settings">Toggle notifications</string>
    <string name="pref_title_user_id">MMLS Student ID</string>
    <string name="pref_summr_user_id">Your MMLS student ID goes here!</string>
    <string name="pref_title_user_pw">MMLS password</string>
    <string name="pref_summr_user_pw">Your MMLS password goes here. Do not worry, it is safe!</string>

    <string name="tab_new_post">New</string>
    <string name="tab_old_post">Old</string>
    <string name="tab_starred_post">Starred</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="view">VIEW</string>
    <string name="dismiss">DISMISS</string>
    <string name="star">STAR</string>
    <string name="space"> </string>
    <string name="save">SAVE</string>
    <string name="update_frequency">Check for update every </string>
    <string name="clear_frequency">Clear posts exceeding </string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">.....</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />



    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
